--- a/index.html
+++ b/index.html
@@ -9,6 +9,13 @@
   </head>
 
   <body>
+    <form>
+      <label for="username-input">Username:</label>
+      <input type="text" name="username-input" id="username-input" /><br />
+      <label for="email-input">Email:</label>
+      <input type="text" name="email-input" id="email-input" /><br />
+      <input type="submit" id="submit" value="Submit" />
+    </form>
     <script src="index.js"></script>
   </body>
 
